--- a/Section 2/index.html
+++ b/Section 2/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
+    <img src = "C:\Users\user\Documents\GitHub\Web-Development-Summer\johnwick.jpg" alt="John Wick" width="400px" height ="700px" border-radius =50px>
     <h1>Min Khant Kyaw</h1>
-    <p><em>Junior Web <strong>Devloper💀💀</strong></em> </p>
+    <p><em>Game Dev<a href="https://github.com/MinKhantKyaw5006"><strong>Github💀💀</strong></a></em> </p>
     <p>I am a web and game developer. i love unity</p>
     <hr>
     <h3>Games and websites</h3>
@@ -19,14 +20,10 @@
         <li>FNAF 4</li>
         <li>FNAF security breach</li>
     </ul>
-    <h3>Game and softwares</h3>
-    <ol>
-        <li>Blender</li>
-        <li>Maya</li>
-        <li>Unity</li>
-        <li>Unreal</li>
-        
-    </ol>
+    <a href="file:///C:/Users/user/Documents/GitHub/Web-Development-Summer/hobbies.html">My Hobbies</a> <br>
+    <a href="C:\Users\user\Documents\GitHub\Web-Development-Summer\Contact.html">Contact me</a>
+
+
 </body>
 
-</html>
+</html>     
