--- a/Section 2/index.html
+++ b/Section 2/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src = "C:\Users\user\Documents\GitHub\Web-Development-Summer\johnwick.jpg" alt="John Wick" width="400px" height ="700px" border-radius =50px>
+    <img src = "C:\Users\user\Documents\GitHub\Web-Development-Summer\Section 2\johnwick.jpg" alt="John Wick" width="400px" height ="700px" border-radius =50px>
     <h1>Min Khant Kyaw</h1>
     <p><em>Game Dev<a href="https://github.com/MinKhantKyaw5006"><strong>Github💀💀</strong></a></em> </p>
     <p>I am a web and game developer. i love unity</p>
@@ -20,8 +20,8 @@
         <li>FNAF 4</li>
         <li>FNAF security breach</li>
     </ul>
-    <a href="file:///C:/Users/user/Documents/GitHub/Web-Development-Summer/hobbies.html">My Hobbies</a> <br>
-    <a href="C:\Users\user\Documents\GitHub\Web-Development-Summer\Contact.html">Contact me</a>
+    <a href="C:\Users\user\Documents\GitHub\Web-Development-Summer\Section 2\hobbies.html">My Hobbies</a> <br>
+    <a href="C:\Users\user\Documents\GitHub\Web-Development-Summer\Section 2\Contact.html">Contact me</a>
 
 
 </body>
