Section 3 Intermediate Html

--- a/Section 2/hobbies.html
+++ b/Section 2/hobbies.html
@@ -15,6 +15,6 @@
         <li>Unreal</li>
         
     </ol>
-    <a href="C:\Users\user\Documents\GitHub\Web-Development-Summer\Section 2\index.html">Back to Main</a>
+    <a href="index.html">Back to Main</a>
 </body>
 </html>
