--- a/Section 2/Contact.html
+++ b/Section 2/Contact.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
- 
+
     <title>Contact Me</title>
 </head>
+
 <body>
-    <h3>My Info</h3>
-    <ul>
-        <li>Name</li>
-        <li>Add</li>
-        <li>Phone</li>
-        <li>Email</li>
-        <li>Status</li>
-        <a href="C:\Users\user\Documents\GitHub\Web-Development-Summer\Section 2\index.html">Back to main</a>
-    </ul>
+    <h1>My Info</h1>
+
+    <p>Name</p>
+    <p>Add</p>
+    <p>Phone</p>
+    <p>Email</p>
+    <p>Status</p>
+
+    <hr>
+    <form action="mailto:minkhant050603@gmail.com" enctype="text/plain" >
+        <label for="">Your Name:</label>
+        <input type="text" name="YourName"><br>
+        <label for="">Your Email:</label>
+        <input type="text" name="YourEmail">
+        <input type="submit"><br>
+        <label for="">Your Message:</label><br>
+        <textarea name="YourMessage" id="" cols="31" rows="10"></textarea><br>
+        <input type="submit"><br>
+        <input type="password"><br>
+        <input type="file"><br>
+        <input type="date"><br>
+        <input type="radio"><br>
+        <input type="range"><br>
+    </form>
+
+    <a href="index.html">Back to main</a>
+
 </body>
+
 </html>
