--- a/Section 2/index.html
+++ b/Section 2/index.html
@@ -7,10 +7,18 @@
 </head>
 
 <body>
-    <img src = "C:\Users\user\Documents\GitHub\Web-Development-Summer\Section 2\johnwick.jpg" alt="John Wick" width="400px" height ="700px" border-radius =50px>
-    <h1>Min Khant Kyaw</h1>
-    <p><em>Game Dev<a href="https://github.com/MinKhantKyaw5006"><strong>Github💀💀</strong></a></em> </p>
-    <p>I am a web and game developer. i love unity</p>
+    <table cellspacing="20">
+        <tr>
+            <td><img src="johnwick.jpg" alt="John Wick" width="400px" height="700px" border-radius=50px></td>
+            <td>
+                <h1>Min Khant Kyaw</h1>
+                <p><em>Game Dev<a href="https://github.com/MinKhantKyaw5006"><strong>Github💀💀</strong></a></em> </p>
+                <p>I am a web and game developer. i love unity</p>
+            </td>
+        </tr>
+    </table>
+
+
     <hr>
     <h3>Games and websites</h3>
     <ul>
@@ -20,10 +28,75 @@
         <li>FNAF 4</li>
         <li>FNAF security breach</li>
     </ul>
-    <a href="C:\Users\user\Documents\GitHub\Web-Development-Summer\Section 2\hobbies.html">My Hobbies</a> <br>
-    <a href="C:\Users\user\Documents\GitHub\Web-Development-Summer\Section 2\Contact.html">Contact me</a>
+    <hr>
+    <table cellspacing=" 10">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Education</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>2009- 2010</td>
+                <td>Basic Education High School</td>
+            </tr>
+            <tr>
+                <td>2023</td>
+                <td>Assumption Univsersity</td>
+            </tr>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+
+    </table>
+
+    <hr>
+    <a href="hobbies.html">My Hobbies</a> <br>
+    <a href="Contact.html">Contact me</a>
+
+    <hr>
+    <h3>My Skills</h3>
+
+    <table cellspacing=" 10">
+        <thead>
+            <tr>
+                <th>Languages</th>
+                <th>Rating</th>
+                ]
+            </tr>
+
+        </thead>
+        <tbody>
+            <tr>
+                <td>Python</td>
+                <td>⭐⭐⭐⭐⭐</td>
+
+
+            </tr>
+            <tr>
+                <td>java</td>
+                <td>⭐⭐⭐</td>
+
+
+            </tr>
+            <tr>
+                <td>C++</td>
+                <td>⭐⭐</td>
+
+
+            </tr>
+
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+
+    </table>
 
 
 </body>
 
-</html>     
+</html>
