--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>💀💀Lucas Personal Title💀💀</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- cuz /css/style.css is including root which cannot be found -->
+
+
 </head>
 
-<body>
+<body style="">
     <table cellspacing="20">
         <tr>
-            <td><img src="johnwick.jpg" alt="John Wick" width="400px" height="700px" border-radius=50px></td>
+            <td><img src="johnwick.jpg" alt="John Wick" width="400px" height="700px" border-radius=50px class="image"></td>
             <td>
-                <h1>Min Khant Kyaw</h1>
+                <h3 id="nametitle">Min Khant Kyaw</h3>
                 <p><em>Game Dev<a href="https://github.com/MinKhantKyaw5006"><strong>Github💀💀</strong></a></em> </p>
                 <p>I am a web and game developer. i love unity</p>
             </td>
@@ -65,7 +69,7 @@
             <tr>
                 <th>Languages</th>
                 <th>Rating</th>
-                ]
+                
             </tr>
 
         </thead>
