--- a/Contact.html
+++ b/Contact.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
 
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>My Info</h1>
+    <h3>My Info</h3>
 
     <p>Name</p>
     <p>Add</p>
