--- a/hobbies.html
+++ b/hobbies.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     
-    <title>My Hobbies
-    </title>
+    <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h3>Game and softwares</h3>
